# araki

./: .gitignore  Cargo.toml  README.md  foo.md
docker/: docker-compose.yml
docker/gitea/config/: app.ini
docker/gitea/data/data/: gitea.db
docker/gitea/data/indexers/issues.bleve/store/: root.bolt
docker/gitea/data/jwt/: private.pem
docker/gitea/data/queues/common/: LOG  MANIFEST-000012
docker/gitea/data/ssh/: gitea.rsa  gitea.rsa.pub
src/: backends.rs  cli.rs  common.rs  main.rs
src/cli/: activate.rs  auth.rs  checkout.rs  clone.rs  common.rs  envs.rs  get.rs  init.rs  list.rs  pull.rs  push.rs  shell.rs  shim.rs  tag.rs
