[package]
name = "araki"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.49", features = ["derive"] }
config = { version = "0.15.19", features = ["toml"] }
console = "0.16.1"
directories = "6.0.0"
git2 = { version = "0.20.2", features = ["https", "ssh"] }
indicatif = "0.18.3"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["v4"] }
